--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "week-3-part2",
-  "version": "0.0.0",
+  "name": "comp229-demo",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
+  },
+  "engines": {
+    "node": "^14.00.0",
+    "npm": "^7.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
@@ -16,5 +20,18 @@
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
-  }
+  },
+  "description": "demo app for comp229 week 3",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abhipatel2103/comp229_abhi.git"
+  },
+  "author": "Abhi Patel",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/abhipatel2103/comp229_abhi/issues"
+  },
+  "homepage": "https://github.com/abhipatel2103/comp229_abhi#readme"
 }
