--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
+    "mongoose": "^5.11.18",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
   },
   "description": "demo app for comp229 week 3",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/abhipatel2103/comp229_abhi.git"
